<resources>
    <string name="app_name">DU_AN_1</string>
    <string name="first_slide_title">WELCOME TO THE KING OF THE FOOD</string>
    <string name="second_slide_title">CƠM GÀ</string>
    <string name="third_slide_title">HUMBERGER</string>

    <string name="first_slide_desc">Nhóm 2</string>
    <string name="second_slide_desc">Có cơm và gà</string>

    <string name="third_slide_desc">Có bánh mì và nhân</string>
    <string name="welcom_king_food">WELCOM TO \n KING FOOD</string>

    <!-- Home-->
    <string name="id_food">Mã Đồ Ăn</string>
    <string name="id_drink">Mã Đồ Uống</string>
    <string name="name_drink">Tên Đồ Uống</string>
    <string name="price_drink">Giá Tiền</string>
    <string name="describe_drink">Mô Tả</string>
    <string name="name_food">Tên Đồ Ăn</string>
    <string name="price_food">Giá Tiền</string>
    <string name="describe_food">Mô Tả</string>
    <string name="save">Lưu</string>
    <string name="cancel">Huỷ</string>
    <string name="get_started">Get Started</string>
    <string name="king_food">KING FOOD</string>
    <string name="hint_username">Nhập tên tài khoản</string>
    <string name="chb_remember_password">Nhớ mật khẩu</string>
    <string name="btn_registration">Đăng ký</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="com_ga">CƠM GÀ</string>
    <string name="seal_food">Khuyến mãi Giảm giá món ăn</string>
    <string name="change_sale">THAY ĐỔI</string>
    <string name="tien_mat">Tiền Mặt</string>
    <string name="prince_oder">150.000</string>
    <string name="oder">Oder</string>
    <string name="hoa_don">HOÁ ĐƠN</string>
    <string name="ma_bill">Mã Hoá Đơn</string>
    <string name="id_Bill">0006615</string>
    <string name="name_person">Hồ Trường An</string>
    <string name="ten_khach_hang">Tên Khác Hàng</string>
    <string name="thong_tin_khach_hang">Thông Tin Khách Hàng</string>
    <string name="thong_tin_phi">Thông Tin Phí</string>
    <string name="name_shop">Cơm Gà Phan Đăng Lưu</string>
    <string name="prince_food">Tiền Món Ăn</string>
    <string name="so_tien_thanh_toan">Số Tiền Thanh Toán</string>
    <string name="thanh_toan">Thanh Toán</string>
    <string name="tien_mon_an">Tiền Món Ăn</string>
    <string name="xem_chi_tiet">Xem Chi Tiết</string>
    <string name="chi_tiet_thanh_toan">Chi tiết thanh toán</string>
    <string name="gia_mon_an">Giá món ăn</string>
    <string name="phi_giao_hang">Phí Giao Hàng</string>
    <string name="sale">Giảm Giá</string>
    <string name="tong_thanh_toan">Tổng Thanh Toán</string>
    <string name="add_food">Thêm món</string>
    <string name="favorite_just_save">Yêu Thích</string>
    <string name="recently">Gần Đây</string>
    <string name="enter_the_email">Enter The Email</string>
    <string name="enter_the_password">Enter The Password</string>
    <string name="enter_retype_your_password">Enter Retype Your Password</string>
    <string name="sign_up">Sign UP</string>
    <string name="go_back_to_login">GO BACK TO LOGIN</string>
    <string name="remember_password">Remember Password</string>
    <string name="login">Login</string>
    <string name="signi_up">SignI-UP</string>
    <string name="sign_in_with">Sign In With :</string>
    <string name="don_hang_cua_ban">Đơn hàng của bạn</string>
    <string name="prince">150.000đ</string>
    <string name="prince_ship">14.000</string>
    <string name="prince_nen_tang">1.000</string>
    <string name="prince_sale">-15.000</string>
    <string name="star">3.9</string>
    <string name="mins">45 mins</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="prince_recycler_item">25000</string>
    <string name="com_ga_phan_dang_luu">Cơm Gà Phan Đăng Lưu</string>
    <string name="search">Search...</string>
    <string name="recommened_for_you">Recommened for You</string>
    <string name="all_food_in_restaurant">All Food in Restaurant</string>
    <string name="popular_this_week">Popular this Week</string>
    <string name="king_food_main">King Food</string>
    <string name="them">+</string>
    <string name="bot">-</string>
    <string name="fravorite_food">MÓN ĂN ƯA THÍCH</string>
    <string name="dich_vu">Dịch Vụ</string>
    <string name="login_or_sign_up">Đăng Nhập / Đăng Kí</string>
    <string name="voucher">Ví Voucher</string>
    <string name="address">Địa Chỉ</string>
    <string name="invite">Mời Bạn Bè</string>
    <string name="help_center">Trung Tâm Trợ Giúp</string>
    <string name="setting">Cài Đặt</string>
    <string name="return_home">Về Trang Chủ</string>
    <string name="version">Phiên Bản 1.1.0.0</string>
    <string name="date">21-11-2020</string>
    <string name="price_bill">20.000đ</string>
    <string name="shopping">Shopping</string>
    <string name="bill">Bill</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="person">Person</string>
    <string name="revenue">Revenue</string>
    <string name="ty_trong_mat_hang">Tỷ Trọng Mặt Hàng</string>
    <string name="carried_away">Mang Đi</string>
    <string name="dish_together">Món Ăn Kèm</string>
    <string name="food">Món Ăn</string>
    <string name="drink">Thức Uống</string>
    <string name="d">Món Ăn</string>
    <string name="sales_report">Báo Cáo Doanh Thu</string>
    <string name="da_thanh_toan">Đã thanh toán</string>
    <string name="so">19</string>
    <string name="cham_muc_ben_duoi">Chạm mục bên dưới để xem chi tiết</string>
    <string name="so_tien_ban_hang_da_thu">Số tiền bán hàng đã thu</string>
    <string name="dang_phuc_vu">Đang phục vụ</string>
    <string name="hoa_don_huy">Hoá đơn huỷ</string>
    <string name="nhan_vien_oder_sai">Số hóa đơn hủy bởi nhân viên order sai</string>
    <string name="hoa_don_giam_gia">Số hóa đơn giảm giá</string>
    <string name="so_tien_phu_thu">Số tiền thu từ phụ thu</string>
    <string name="so_hoa_don_giam_gia">Hoá đơn giảm giá</string>
    <string name="hoa_don_phu_thu">Hoá đơn ph thu</string>
    <string name="humber">Humber</string>
    <string name="effective">Có Hiệu Lực</string>
    <string name="used">Đã Sử Dụng</string>
    <string name="expired">Hết Hiệu Lực</string>
    <string name="sale_voucher">Mã Giảm 20k Trên Gia Món</string>
    <string name="limited_offer">Ưu Đãi Có Giới Hạn</string>


</resources>