<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_300"
            android:src="@drawable/background" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_25"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="@dimen/dp_10"
        android:hint="@string/enter_the_email"
        android:inputType="text"
        android:padding="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_30"
        android:textSize="@dimen/sp_20" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtUserName"
        android:baselineAligned="false"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_25"
            android:background="@drawable/border"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/enter_the_password"
            android:inputType="textPassword"
            android:padding="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_30"
            android:textSize="@dimen/sp_20" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_marginBottom="@dimen/dp_10"
        android:buttonTint="#82D7FA"
        android:text="@string/remember_password" />

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/signi_up"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/sign_in_with"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20" />

    <LinearLayout
        android:gravity="center"
        android:layout_below="@id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/dp_65"
            android:id="@+id/GGView"
            android:layout_height="@dimen/dp_65"
            android:layout_margin="@dimen/dp_20"
            android:layout_below="@+id/or"
            android:padding="@dimen/dp_10"
            android:src="@drawable/ic_gmail" />

        <ImageView
            android:layout_width="@dimen/dp_65"
            android:id="@+id/FBView"
            android:layout_height="@dimen/dp_65"
            android:layout_margin="@dimen/dp_20"
            android:layout_below="@+id/or"
            android:layout_toRightOf="@id/GGView"
            android:padding="@dimen/dp_10"
            android:src="@drawable/ic_facebook" />
    </LinearLayout>



</RelativeLayout>