<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/nav_oder_top">

        <ImageView
            android:id="@+id/img_back_oder"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:src="@drawable/ic_back"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/dp_10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_toEndOf="@+id/img_back_oder"
            android:text="@string/com_ga"
            android:textSize="@dimen/sp_30" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_125"
        android:layout_above="@+id/nav_oder_bottom"
        android:layout_below="@+id/top"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_5">

            <RelativeLayout
                android:id="@+id/opening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_15"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/don_hang_cua_ban"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_20" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_oder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="#FFFFFF"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_15"
                    android:background="@drawable/border"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/add_food"
                    android:textColor="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/dp_60" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_80"
                android:layout_below="@+id/opening"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white">

                <RelativeLayout
                    android:layout_width="@dimen/dp_350"
                    android:layout_height="@dimen/dp_60"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_rela_oder">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="@dimen/dp_30"
                        android:layout_marginTop="@dimen/dp_20"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/seal_food"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_15" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_change_sale"
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_30"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"

                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginTop="14dp"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:background="@drawable/bg_btn_change_sake"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/change_sale"
                        android:textColor="@color/white" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/body"
                android:background="@color/white"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/dp_15"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/chi_tiet_thanh_toan"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_20" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_details_oder"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_30"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_18"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:background="@drawable/bg_xem_chi_tiet"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/xem_chi_tiet"
                    android:textColor="@color/green" />

                <RelativeLayout
                    android:layout_width="@dimen/dp_350"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_65"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_30"
                    android:background="@drawable/border_end_oder">

                    <TextView
                        android:id="@+id/gia_mon_an"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gia_mon_an"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:textSize="@dimen/sp_20"/>
                    <TextView
                        android:id="@+id/tien_mon_an"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prince"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:textSize="@dimen/sp_20"/>

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_5"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/tien_mon_an"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layerType="software"
                        android:src="@drawable/line" />

                    <TextView
                        android:id="@+id/phi_giao_hang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/imageView1"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_5"
                        android:text="@string/phi_giao_hang"
                        android:textSize="@dimen/sp_20" />

                    <TextView
                        android:id="@+id/tien_ship"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/imageView1"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_5"
                        android:text="@string/prince_ship"
                        android:textSize="@dimen/sp_20" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_5"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/tien_ship"
                        android:layerType="software"
                        android:src="@drawable/line" />

                    <TextView
                        android:id="@+id/phi_nen_tang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/imageView2"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_5"
                        android:text="Phí Nền Tảng"
                        android:textSize="@dimen/sp_20" />

                    <TextView
                        android:id="@+id/tien_nen_tang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView2"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_10"
                        android:text="@string/prince_nen_tang"
                        android:textSize="@dimen/sp_20" />
                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_5"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_below="@+id/tien_nen_tang"
                        android:layerType="software"
                        android:src="@drawable/line" />

                    <TextView
                        android:id="@+id/giam_gia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/imageView4"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_5"
                        android:text="@string/sale"
                        android:textSize="@dimen/sp_20" />

                    <TextView
                        android:id="@+id/tien_giam_gia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView4"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_10"
                        android:text="@string/prince_sale"
                        android:textSize="@dimen/sp_20" />
                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_5"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_below="@+id/giam_gia"
                        android:layerType="software"
                        android:src="@drawable/line_end" />

                    <TextView
                        android:id="@+id/tong_thanh_toan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/imageView5"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_15"
                        android:text="@string/tong_thanh_toan"
                        android:layout_marginBottom="@dimen/dp_20"
                        android:textSize="@dimen/sp_20" />

                    <TextView
                        android:id="@+id/tong_tien"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView5"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginRight="@dimen/dp_10"
                        android:text="@string/prince_oder"
                        android:layout_marginBottom="@dimen/dp_20"
                        android:textSize="@dimen/sp_20" />

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/nav_oder_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_130"
        android:layout_alignParentBottom="true"
        android:background="@drawable/nav_oder_bottom" >
        <TextView
            android:id="@+id/prince_oder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prince_oder"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="@dimen/dp_20"/>

        <TextView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_100"
            android:background="@drawable/bg_text"
            android:scaleType="center"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="sans-serif-black"
            android:text="@string/tien_mat"
            android:textSize="@dimen/dp_20" />

        <Button
            android:id="@+id/btnOder"
            android:layout_width="@dimen/dp_300"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/oder"
            android:layout_marginTop="@dimen/dp_50"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/dp_20"
            android:background="@drawable/button_background"
            />
    </RelativeLayout>
</RelativeLayout>