<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_350"
        android:src="@drawable/background" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:layout_below="@id/background"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/dp_10"
        android:hint="@string/enter_the_email"
        android:inputType="text"
        android:padding="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_30"
        android:textSize="@dimen/sp_20" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtEmail"
        android:baselineAligned="false"
        android:layout_margin="@dimen/dp_16"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtPasswordNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/background"
            android:background="@drawable/border"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/enter_the_password"
            android:inputType="textPassword"
            android:padding="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_30"
            android:textSize="@dimen/sp_20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RetypePassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:baselineAligned="false"
        android:layout_margin="@dimen/dp_16"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtRetypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/background"
            android:background="@drawable/border"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/enter_retype_your_password"
            android:inputType="textPassword"
            android:padding="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_30"
            android:textSize="@dimen/sp_20" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RetypePassword"
        android:layout_margin="@dimen/dp_16"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/go_back_to_login"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>